<resources>
    <string name="app_name">Intent Project</string>
    <string name="button_main">Kirim</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Write your message</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>

</resources>
