<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".SecondActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:text="@string/text_header" android:layout_marginTop="16dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/text_header"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/text_message" app:layout_constraintTop_toBottomOf="@+id/text_header"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/button_second" android:id="@+id/button_second" app:layout_constraintRight_toRightOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:onClick="returnReply" android:layout_marginBottom="16dp" android:layout_marginRight="16dp"/>

    <EditText android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/editText_second" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp" app:layout_constraintEnd_toStartOf="@+id/button_second" android:inputType="textLongMessage" android:hint="@string/editText_second" android:ems="10" android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
